daniel_millan/session01/exercise02/mariadb-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: mariadb
  namespace: exercise-02
  labels:
    app: mariadb
    service: database
spec:
  template:
    metadata:
      labels:
        app: mariadb
        service: database
    spec:
      containers:
      - image: bitnami/mariadb:latest
        name: mariadb
        ports:
        - containerPort: 3306
          name: mariadb
        livenessProbe:
          exec:
            command:
              - mysqladmin
              - ping
          initialDelaySeconds: 30
          timeoutSeconds: 25
          periodSeconds: 30
          successThreshold: 1
          failureThreshold: 10
        readinessProbe:
          exec:
            command:
              - mysqladmin
              - ping
          initialDelaySeconds: 30
          timeoutSeconds: 25
          periodSeconds: 30
          successThreshold: 1
          failureThreshold: 10
