daniel_millan/session01/exercise02/wordpress-canary-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: wordpress-deployment-canary
  namespace: exercise-02
  labels:
    app: wordpress
    service: frontend
spec:
  template:
    metadata:
      labels:
        app: wordpress
        service: frontend
        tier: canary
    spec:
      containers:
      - image: bitnami/wordpress:4.9.5
        name: wordpress
        ports:
        - containerPort: 80
          name: wordpress          
        livenessProbe:
          httpGet:
            path: /
            port: 80
            scheme: HTTP
          initialDelaySeconds: 30
          timeoutSeconds: 25
          periodSeconds: 30
          successThreshold: 1
          failureThreshold: 10
        readinessProbe:
          httpGet:
            path: /
            scheme: HTTP
            port: 80
          initialDelaySeconds: 30
          timeoutSeconds: 25
          periodSeconds: 30
          successThreshold: 1
          failureThreshold: 10
