daniel_millan/session01/exercise02/mariadb-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: mariadb
  namespace: exercise-02
  labels:    
    app: mariadb
spec:
  ports:
    - port: 3306
      name: mariadb-port
  selector:
    app: mariadb
  clusterIP: None
