daniel_millan/session01/exercise02/wordpress-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpress
  namespace: exercise-02
  annotations:
    nginx.ingress.kubernetes.io/affinity: cookie
  labels:
    app: wordpress
spec:
  ports:
    - port: 80
      name: http
  selector:
    app: wordpress
  type: LoadBalancer
